# adventofcode

2019/day1/: Cargo.toml
2019/day1/src/: main.rs
2019/day2/: Cargo.toml
2019/day2/src/: main.rs
2019/day3/src/: main.rs
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day10/: Cargo.toml  input2
2020/day10/src/: part1.rs  part2.rs
2020/day11/: Cargo.toml
2020/day11/.config/: config.toml
2020/day11/src/: part1.rs  part2.rs
2020/day12/: Cargo.toml
2020/day12/src/: main.rs  part1.rs  part2.rs  point.rs
2020/day13/: Cargo.toml
2020/day13/src/: part1.rs  part2.rs
2020/day14/: Cargo.toml
2020/day14/src/: main.rs  part1.rs  part2.rs
2020/day15/: Cargo.toml
2020/day15/src/: main.rs
2020/day16/: toolchain.toml
2020/day16/src/: main.rs
2020/day2/: Cargo.toml  README.md
2020/day2/src/: main.rs  main2.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs  main2.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs  main2.rs
2020/day5/: Cargo.toml
2020/day5/src/: main.rs  main2.rs
2020/day6/: Cargo.toml
2020/day6/src/: main.rs  main2.rs
2020/day7/: Cargo.toml
2020/day7/src/: main.rs  (+2 more)
2020/day8/: Cargo.toml  input2
2020/day8/src/: main.rs  part1.rs  part2.rs
2020/day9/: Cargo.toml
2021/day1/: Cargo.toml
2021/day2/: Cargo.toml
2021/day3/: Cargo.toml
2021/day4/: Cargo.toml
2022/day11/: Cargo.toml
2022/day12/: Cargo.toml
2022/day2/: Cargo.toml
2023/day1/: day1.opam  dune-project
2025/day1/: day1_2025.opam  dune-project
2025/day2/: day2_2025.opam  dune-project
lib/ocaml/: aoc_utils.ml  dune  dune-project
(+31 files in other folders)
