[package]
name = "day4"
version = "0.1.0"
authors = ["Arunscape <arun@woosaree.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "part1"
path = "src/main.rs"

[[bin]]
name = "part2"
path = "src/main2.rs"

[dependencies]



